# openbox

./: .clang-format  .gitignore  HACKING.md  Makefile.am  configure.ac  gettext.h  meson.build  meson_options.txt
.github/workflows/: c-cpp.yml  ci.yml
data/: menu.xml  meson.build  rc.xml
data/autostart/: autostart.in  openbox-autostart.in  openbox-xdg-autostart
data/xsession/: openbox-gnome-session.in  openbox-session.in
doc/: meson.build
m4/: openbox.m4  x11.m4
obrender/: button.c  color.c  color.h  font.c  font.h  geom.h  gradient.c  gradient.h  icon.h  image.c  image.h  imagecache.c  imagecache.h  instance.c  instance.h  mask.c  mask.h  meson.build  render.c  render.h  test.c  theme.c  theme.h
obt/: bsearch.h  bsearch_unittest.c  ddparse.c  ddparse.h  display.c  display.h  internal.h  keyboard.c  keyboard.h  link.c  link.h  meson.build  paths.c  paths.h  prop.c  prop.h  signal.c  signal.h  unittest_base.c  unittest_base.h  util.h  xml.c  xml.h  xqueue.c  xqueue.h
obt/tests/: bstest.c  ddtest.c  linktest.c  watchtest.c
openbox/: actions.c  actions.h  client.c  client.h  client_list_combined_menu.c  client_list_combined_menu.h  client_list_menu.c  client_list_menu.h  client_menu.c  client_menu.h  config.c  config.h  debug.c  debug.h  dock.c  dock.h  event.c  event.h  focus.c  focus.h  focus_cycle.c  focus_cycle.h  focus_cycle_indicator.c  focus_cycle_indicator.h  focus_cycle_popup.c  focus_cycle_popup.h  frame.c  frame.h  framerender.c  framerender.h  geom.h  grab.c  grab.h  group.c  group.h  keyboard.c  keyboard.h  keytree.c  keytree.h  menu.c  (+36 more)
openbox/actions/: addremovedesktop.c  all.c  all.h  breakchroot.c  close.c  cyclewindows.c  debug.c  decorations.c  desktop.c  directionalwindows.c  dock.c  dockautohide.c  execute.c  exit.c  focus.c  focustobottom.c  fullscreen.c  growtoedge.c  iconify.c  if.c  kill.c  layer.c  lower.c  maximize.c  move.c  moverelative.c  moveresizeto.c  movetoedge.c  omnipresent.c  raise.c  raiselower.c  reconfigure.c  resize.c  resizerelative.c  restart.c  shade.c  shadelowerraise.c  showdesktop.c  showmenu.c  unfocus.c
po/: meson.build
tests/: Makefile  aspect.c  big.c  borderchange.c  confignotify.c  confignotifymax.c  cursorio.c  duplicatesession.c  extentsrequest.c  fakeunmap.c  fallback.c  focusout.c  fullscreen.c  grav.c  groupmodal.c  grouptran.c  grouptran2.c  grouptrancircular.c  grouptrancircular2.c  iconifydelay.c  icons.c  mapiconic.c  mingrow.c  modal.c  modal2.c  modal3.c  noresize.c  oldfullscreen.c  override.c  overrideinputonly.c  positioned.c  resize.c  restack.c  shape.c  showhide.c  skiptaskbar.c  skiptaskbar2.c  stackabove.c  stacking.c  strut.c  (+4 more)
themes/: meson.build
themes/Mikachu/openbox-3/: themerc
tools/: meson.build
tools/obxprop/: obxprop.c
