clearlooks_dir = join_paths(themedir_rel, 'Clearlooks', 'openbox-3')
install_data('Clearlooks/openbox-3/themerc', install_dir: clearlooks_dir)

clearlooks34_dir = join_paths(themedir_rel, 'Clearlooks-3.4', 'openbox-3')
install_data('Clearlooks-3.4/openbox-3/themerc', install_dir: clearlooks34_dir)

clearlooksolive_dir = join_paths(themedir_rel, 'Clearlooks-Olive', 'openbox-3')
install_data('Clearlooks-Olive/openbox-3/themerc', install_dir: clearlooksolive_dir)

mikachu_dir = join_paths(themedir_rel, 'Mikachu', 'openbox-3')
install_data(
  [
    'Mikachu/openbox-3/bullet.xbm',
    'Mikachu/openbox-3/close.xbm',
    'Mikachu/openbox-3/desk.xbm',
    'Mikachu/openbox-3/iconify.xbm',
    'Mikachu/openbox-3/max.xbm',
    'Mikachu/openbox-3/themerc',
  ],
  install_dir: mikachu_dir)

natura_dir = join_paths(themedir_rel, 'Natura', 'openbox-3')
install_data(
  [
    'Natura/openbox-3/close_hover.xbm',
    'Natura/openbox-3/close.xbm',
    'Natura/openbox-3/desk_toggled.xbm',
    'Natura/openbox-3/desk_hover.xbm',
    'Natura/openbox-3/desk.xbm',
    'Natura/openbox-3/iconify_hover.xbm',
    'Natura/openbox-3/iconify.xbm',
    'Natura/openbox-3/max_hover.xbm',
    'Natura/openbox-3/max_toggled.xbm',
    'Natura/openbox-3/max.xbm',
    'Natura/openbox-3/shade.xbm',
    'Natura/openbox-3/shade_hover.xbm',
    'Natura/openbox-3/themerc',
  ],
  install_dir: natura_dir)

artwiz_dir = join_paths(themedir_rel, 'Artwiz-boxed', 'openbox-3')
install_data('Artwiz-boxed/openbox-3/themerc', install_dir: artwiz_dir)

bear2_dir = join_paths(themedir_rel, 'Bear2', 'openbox-3')
install_data(
  [
    'Bear2/openbox-3/close_pressed.xbm',
    'Bear2/openbox-3/close.xbm',
    'Bear2/openbox-3/desk_toggled.xbm',
    'Bear2/openbox-3/desk.xbm',
    'Bear2/openbox-3/iconify_pressed.xbm',
    'Bear2/openbox-3/iconify.xbm',
    'Bear2/openbox-3/max_pressed.xbm',
    'Bear2/openbox-3/max_toggled.xbm',
    'Bear2/openbox-3/max.xbm',
    'Bear2/openbox-3/shade_pressed.xbm',
    'Bear2/openbox-3/shade.xbm',
    'Bear2/openbox-3/themerc',
  ],
  install_dir: bear2_dir)

orang_dir = join_paths(themedir_rel, 'Orang', 'openbox-3')
install_data('Orang/openbox-3/themerc', install_dir: orang_dir)

onyx_dir = join_paths(themedir_rel, 'Onyx', 'openbox-3')
install_data('Onyx/openbox-3/themerc', install_dir: onyx_dir)

onyx_citrus_dir = join_paths(themedir_rel, 'Onyx-Citrus', 'openbox-3')
install_data('Onyx-Citrus/openbox-3/themerc', install_dir: onyx_citrus_dir)

syscrash_dir = join_paths(themedir_rel, 'Syscrash', 'openbox-3')
install_data(
  [
    'Syscrash/openbox-3/max_disabled.xbm',
    'Syscrash/openbox-3/max_pressed.xbm',
    'Syscrash/openbox-3/max_toggled.xbm',
    'Syscrash/openbox-3/max.xbm',
    'Syscrash/openbox-3/themerc',
  ],
  install_dir: syscrash_dir)
